syntax = "proto3";

package auth;

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string refresh_token = 1;
    string access_token = 2;
}

message RegisterRequest {
    string email = 1;
    string phone = 2;
    string password = 3;
}

message RegisterResponse {
    string refresh_token = 1;
    string access_token = 2;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse {
    string access_token = 1;
}

message LogoutRequest {
    string access_token = 1;
}

message LogoutResponse {
    bool success = 1;
}