syntax = "proto3";

package user;

service UserService {
    rpc FindOne (UserByUuid) returns (User);
    rpc FindAll (stream UserByUuid) returns (stream User);
}

message UserByUuid {
    string uuid = 1;
}

message User {
    string uuid = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}

